9antraKidsFrontV2/pv-pvc.yaml
apiVersion: v1v1
kind: Pod
metadata:
  name: demo-pod
spec:
  nodeName: worker
  containers:
    - name: demo-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: demo-storage
  volumes:
    - name: demo-storage
      persistentVolumeClaim:
        claimName: demo-pvc
