9antraKidsFrontV2/nineantrakidsfrontv2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nineantrakidsfrontv2-svc
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: 9antrakidsfrontv2
