9antraKidsFrontV2/nineantrakidsfrontv2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nineantrakidsfrontv2-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 9antrakidsfrontv2.tn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nineantrakidsfrontv2-svc
            port:
              number: 8080
